@@ -1,5 +1,5 @@
 <?php
-// $Id: views-view-unformatted.tpl.php,v 1.6 2008-10-01 20:52:11 merlinofchaos Exp $
+// $Id: views-view-unformatted.tpl.php,v 1.6.6.1 2010-03-29 20:05:38 dereine Exp $
 /**
  * @file views-view-unformatted.tpl.php
  * Default simple view template to display a list of rows.
@@ -11,7 +11,7 @@
   <h3><?php print $title; ?></h3>
 <?php endif; ?>
 <?php foreach ($rows as $id => $row): ?>
-  <div class="<?php print $classes[$id]; ?>">
+  <div class="<?php print $classes_array[$id]; ?>">
     <?php print $row; ?>
   </div>
 <?php endforeach; ?>
